@@ -12,6 +12,7 @@ v0.07
 	* FIX : surpress drawing artefact when creating a new segment
 	* FIX : avoid Qt to have to process download notifications recursively
 	* ADD : scripts to create the windows installation package
+	* ADD : create way from selected segments tool
 
 v0.06 5 dec 2006 
 	* FIX : also recognize true/false for oneway tag
